--- a/guide/list_other.html
+++ b/guide/list_other.html
@@ -19,8 +19,8 @@
             position: relative;
         }
         .del td {
-            background: red;
-            text-decoration: line-through;
+            /* background: red;
+            text-decoration: line-through; */
         }
         .d1, .d2, .d3, .sbid { text-align: left !important;}
         tr td:last-child {
@@ -105,7 +105,7 @@
                     <td class="d1">공통(BC)</td>
                     <td class="d2"></td>
                     <td class="d3">알럿</td>
-                    <td class="sbid"><span class="pc">Alert</span><span class="mo"></span></td>
+                    <td class="sbid"><span class="pc">BCalert</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-30</td>
                     <td class="ex_end">08-30</td>
@@ -205,7 +205,7 @@
                     <td class="state" data-state="done"></td>
                     <td>popup, 컴포넌트 작업 후 재전달</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">01GNB</td>
                     <td class="d2">01사용자등록</td>
                     <td class="d3"></td>
@@ -215,10 +215,10 @@
                     <td class="ex_end">08-31</td>
                     <td class="date_start">08-26</td>
                     <td class="date_end">08-26</td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(700)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">01GNB</td>
                     <td class="d2">02문자발송</td>
                     <td class="d3">발송</td>
@@ -228,10 +228,10 @@
                     <td class="ex_end">08-31</td>
                     <td class="date_start">08-26</td>
                     <td class="date_end">08-26</td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(900)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">01GNB</td>
                     <td class="d2">02문자발송</td>
                     <td class="d3">발송(불러오기)</td>
@@ -241,10 +241,10 @@
                     <td class="ex_end">08-31</td>
                     <td class="date_start">08-26</td>
                     <td class="date_end">08-26</td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(600)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">01GNB</td>
                     <td class="d2">02문자발송</td>
                     <td class="d3">발송(엑셀업로드)</td>
@@ -254,10 +254,10 @@
                     <td class="ex_end">08-31</td>
                     <td class="date_start">08-26</td>
                     <td class="date_end">08-26</td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(450)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">01GNB</td>
                     <td class="d2">02문자발송</td>
                     <td class="d3">메세지설정</td>
@@ -267,10 +267,10 @@
                     <td class="ex_end">08-31</td>
                     <td class="date_start">08-26</td>
                     <td class="date_end">08-26</td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(900)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">01GNB</td>
                     <td class="d2">02문자발송</td>
                     <td class="d3">발송현황</td>
@@ -280,7 +280,7 @@
                     <td class="ex_end">08-31</td>
                     <td class="date_start">08-26</td>
                     <td class="date_end">08-26</td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(900)</td>
                 </tr>
                 <tr class="do">
@@ -291,7 +291,7 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-01</td>
                     <td class="ex_end">09-01</td>
-                    <td class="date_start">08-27</td>
+                    <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td>popup(410)</td>
@@ -304,7 +304,7 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-01</td>
                     <td class="ex_end">09-01</td>
-                    <td class="date_start">07-27</td>
+                    <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td>popup(960)</td>
@@ -317,7 +317,7 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-01</td>
                     <td class="ex_end">09-01</td>
-                    <td class="date_start">07-27</td>
+                    <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td>popup(600)</td>
@@ -369,7 +369,7 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-02</td>
                     <td class="ex_end">09-02</td>
-                    <td class="date_start">08-27</td>
+                    <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td>popup(410)</td>
@@ -382,7 +382,7 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-02</td>
                     <td class="ex_end">09-02</td>
-                    <td class="date_start">08-27</td>
+                    <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td>popup(410)</td>
@@ -421,7 +421,7 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-02</td>
                     <td class="ex_end">09-02</td>
-                    <td class="date_start">08-27</td>
+                    <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td>popup(700)</td>
@@ -434,7 +434,7 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-02</td>
                     <td class="ex_end">09-02</td>
-                    <td class="date_start">08-27</td>
+                    <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td>popup(700)</td>
@@ -473,7 +473,7 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-03</td>
                     <td class="ex_end">09-03</td>
-                    <td class="date_start">08-27</td>
+                    <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td>popup(800)</td>
@@ -590,7 +590,7 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-06</td>
                     <td class="ex_end">09-06</td>
-                    <td class="date_start">08-30</td>
+                    <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td>popup(700)</td>
@@ -616,7 +616,7 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-07</td>
                     <td class="ex_end">09-07</td>
-                    <td class="date_start">08-30</td>
+                    <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td>popup(700)</td>
@@ -707,7 +707,7 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-08</td>
                     <td class="ex_end">09-08</td>
-                    <td class="date_start">08-30</td>
+                    <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td>popup(700)</td>
@@ -720,7 +720,7 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-08</td>
                     <td class="ex_end">09-08</td>
-                    <td class="date_start">08-30</td>
+                    <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td>popup(700)</td>
@@ -733,7 +733,7 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-08</td>
                     <td class="ex_end">09-08</td>
-                    <td class="date_start">08-30</td>
+                    <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td>popup(700)</td>
@@ -746,7 +746,7 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-08</td>
                     <td class="ex_end">09-08</td>
-                    <td class="date_start">08-30</td>
+                    <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td>popup(700)</td>
@@ -759,7 +759,7 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-09</td>
                     <td class="ex_end">09-09</td>
-                    <td class="date_start">08-30</td>
+                    <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td>popup(700)</td>
@@ -772,7 +772,7 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-09</td>
                     <td class="ex_end">09-09</td>
-                    <td class="date_start">08-30</td>
+                    <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td>popup(450)</td>
@@ -785,7 +785,7 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-09</td>
                     <td class="ex_end">09-09</td>
-                    <td class="date_start">08-31</td>
+                    <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td>popup(450)</td>
@@ -824,7 +824,7 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-09</td>
                     <td class="ex_end">09-09</td>
-                    <td class="date_start">08-31</td>
+                    <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td>popup(800)</td>
@@ -850,7 +850,7 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-10</td>
                     <td class="ex_end">09-10</td>
-                    <td class="date_start">08-31</td>
+                    <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td>popup(700)</td>
@@ -902,7 +902,7 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-13</td>
                     <td class="ex_end">09-13</td>
-                    <td class="date_start">08-31</td>
+                    <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td>popup(700)</td>
@@ -915,7 +915,7 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-13</td>
                     <td class="ex_end">09-13</td>
-                    <td class="date_start">08-31</td>
+                    <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td>popup(700)</td>
@@ -928,7 +928,7 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-13</td>
                     <td class="ex_end">09-13</td>
-                    <td class="date_start">08-31</td>
+                    <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td>popup(700)</td>
