--- a/pages/BC/BC010001.html
+++ b/pages/BC/BC010001.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../../resources/css/index_bc.css">
 </head>
-<body class="bc">
+<body class="">
     <div class="wrap">
         <!-- Header Include -->
         <div data-include-path="../layout/header_bc.html"></div>
