--- a/pages/BC/BCloginA.html
+++ b/pages/BC/BCloginA.html
@@ -7,8 +7,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="../../resources/css/index_bc.css">
 </head>
-<body class="bc">
+<body class="">
     <div class="wrap login-wrap">
+        <!-- Header Include -->
+        <!-- <div data-include-path="../layout/header_bc.html"></div> -->
+
         <div class="login-content type-a">
             <div class="login-image-box">
                 <div class="logo-set">
