--- a/guide/list.html
+++ b/guide/list.html
@@ -517,7 +517,7 @@
                     <td class="state" data-state="done"></td>
                     <td>popup(lg)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">02계약</td>
                     <td class="d2">02고객계약</td>
                     <td class="d3">02등록</td>
@@ -527,7 +527,7 @@
                     <td class="ex_end">08-19</td>
                     <td class="date_start">08-26</td>
                     <td class="date_end">08-26</td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="state" data-state="done"></td>
                     <td>퀵메뉴 있음</td>
                 </tr>
                
@@ -714,6 +714,19 @@
                     <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
+                <tr class="do">
+                    <td class="d1">03정산</td>
+                    <td class="d2">02정산산정</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA030201</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start">08-27</td>
+                    <td class="ex_end">08-27</td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td></td>
+                </tr>
                 <tr class="">
                     <td class="d1">03정산</td>
                     <td class="d2">03정산조회</td>
@@ -753,6 +766,32 @@
                     <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
+                <tr class="do">
+                    <td class="d1">03정산</td>
+                    <td class="d2">06정산지급</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA030601</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start">08-27</td>
+                    <td class="ex_end">08-27</td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">03정산</td>
+                    <td class="d2">06정산지급</td>
+                    <td class="d3">02정산보고</td>
+                    <td class="sbid"><span class="pc">SA030602</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start">08-27</td>
+                    <td class="ex_end">08-27</td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td>popup(lg)</td>
+                </tr>
                 <tr class="">
                     <td class="d1">03정산</td>
                     <td class="d2">07이체관리</td>
@@ -772,11 +811,11 @@
                     <td class="d3">02등록</td>
                     <td class="sbid"><span class="pc">SA030702</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start">08-25</td>
-                    <td class="ex_end">08-25</td>
-                    <td class="date_start">08-26</td>
-                    <td class="date_end">08-26</td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="ex_start">08-27</td>
+                    <td class="ex_end">08-27</td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
                     <td>popup(md), 테이블 체크 확인</td>
                 </tr>
                 <tr class="">
@@ -803,6 +842,175 @@
                     <td class="date_start">08-20</td>
                     <td class="date_end">08-20</td>
                     <td class="state" data-state="done"></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">03정산</td>
+                    <td class="d2">09일마감관리</td>
+                    <td class="d3">02상세현황</td>
+                    <td class="sbid"><span class="pc">SA030902</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start">08-27</td>
+                    <td class="ex_end">08-27</td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td>popup(lg)</td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">03정산</td>
+                    <td class="d2">09일마감관리</td>
+                    <td class="d3">03일마감등록</td>
+                    <td class="sbid"><span class="pc">SA030903</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start">08-27</td>
+                    <td class="ex_end">08-27</td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td>popup(lg)</td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">04과금</td>
+                    <td class="d2">01과금관리</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA040101</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">04과금</td>
+                    <td class="d2">01과금관리</td>
+                    <td class="d3">02대량수정</td>
+                    <td class="sbid"><span class="pc">SA040102</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td>popup(lg)</td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">04과금</td>
+                    <td class="d2">02출금신청</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA040201</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">04과금</td>
+                    <td class="d2">03특이업체관리</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA040301</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">04과금</td>
+                    <td class="d2">03특이업체관리</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA040301</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">04과금</td>
+                    <td class="d2">04입금기타관리</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA040401</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">04과금</td>
+                    <td class="d2">05미납문자전송</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA040501</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">04과금</td>
+                    <td class="d2">05미납문자전송</td>
+                    <td class="d3">02예약발송</td>
+                    <td class="sbid"><span class="pc">SA040502</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td>popup(sm)</td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">04과금</td>
+                    <td class="d2">06계산서발행</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA040601</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">04과금</td>
+                    <td class="d2">07계산서조회</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA040701</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">04과금</td>
+                    <td class="d2">07계산서조회</td>
+                    <td class="d3">02수정세금계산서발행</td>
+                    <td class="sbid"><span class="pc">SA040702</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
                     <td></td>
                 </tr>
                 <tr class="">
@@ -1102,9 +1310,9 @@
                     <td class="date_start">07-15</td>
                     <td class="date_end">07-22</td>
                     <td class="state" data-state="done"></td>
-                    <td>재작업 후 전달</td>
+                    <td>SA070602_01.html 참조</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">07서비스품질</td>
                     <td class="d2">06이메일관리</td>
                     <td class="d3">02이메일발송_01수신자추가</td>
@@ -1114,10 +1322,10 @@
                     <td class="ex_end">08-27</td>
                     <td class="date_start">08-26</td>
                     <td class="date_end">08-26</td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">07서비스품질</td>
                     <td class="d2">06이메일관리</td>
                     <td class="d3">02이메일발송_02대량수신자추가</td>
@@ -1127,8 +1335,8 @@
                     <td class="ex_end">08-27</td>
                     <td class="date_start">08-26</td>
                     <td class="date_end">08-26</td>
-                    <td class="state" data-state="ing"></td>
-                    <td>파일 업로드</td>
+                    <td class="state" data-state="done"></td>
+                    <td>SA070602_01.html 참조, 파일 업로드</td>
                 </tr>
                 <tr class="">
                     <td class="d1">07서비스품질</td>
