--- a/pages/BC/BC010004.html
+++ b/pages/BC/BC010004.html
@@ -7,10 +7,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="../../resources/css/index_bc.css">
 </head>
-<body class="bc">
+<body class="">
     <div class="wrap">
         <!-- Header Include -->
-        <div data-include-path="../layout/header_bp.html"></div>
+        <div data-include-path="../layout/header_bc.html"></div>
 
         <div id="container">
         </div>
