--- a/pages/BC/BCalert.html
+++ b/pages/BC/BCalert.html
@@ -10,49 +10,23 @@
 <body>
     <div class="wrap">
         <!-- Header Include -->
-        <div data-include-path="../layout/header.html"></div>
-
+        <div data-include-path="../layout/header_bc.html"></div>
+        
         <div id="container">
-            <!-- Header Include -->
-            <div data-include-path="../layout/lnb.html"></div>
-             <!-- Contents -->
-             <main class="contents-wrap">
-                <button id="show" data-role="button" data-bind="click: show, enabled: isEnabled">Popup Button</button>
-            </main>
         </div>
+
         <div data-role="dialog"
-             data-title="엑셀 업로드"
+             data-title=""
              data-modal="false"
              data-bind="dialogOpen: isVisible,
-                            events: { close: onClose}" class="sm">
+                            events: { close: onClose}" class="alert">
             <div class="content-group">
-                <div class="title-box xsm mt-0">
-                    <span class="upload-title">
-                        * 1회 100건까지 등록 가능합니다
-                    </span>
-                    <button data-role="button" class="light-green"><span>샘플파일</span></button>
-                </div>
-                <div class="upload-box">
-                    <div class="upload type2">
-                        <input type="file"
-                        id="viewModel_fileUpload_default"
-                            name="files"
-                            type="file"
-                            data-role="upload"
-                            data-multiple="false"
-                            data-validation= "{
-                                allowedExtensions: ['.jpg', '.jpeg', '.png', '.bmp', '.gif']
-                            }"
-                            data-show-file-list= "true"
-                            data-localization="{select: '파일 선택'}"
-                            data-async="{ saveUrl: 'save', removeUrl: 'remove', autoUpload: true }"
-                            data-bind="visible: isVisible,
-                                        enabled: isEnabled" 
-                        >
-                    </div> 
-                </div>
-                <div class="btn-box bottom">
-                    <button data-role="button"><span>등록</span></button>
+                <p class="main-text">
+                    삭제되었습니다.<br/>
+                    대기건 <span class="point">3</span>건의 가상계좌로<br/>
+                    전환되었습니다.</p>
+                <div class="btn-box">
+                    <button data-role="button" class="">확인</button>
                 </div>
             </div>
         </div>
@@ -69,6 +43,7 @@
         kendo.data.binders.widget.dialogOpen = kendo.data.Binder.extend({
             init: function (widget, bindings, options) {
                 kendo.data.Binder.fn.init.call(this, widget.element[0], bindings, options);
+                $('.k-dialog').addClass('no-header');
             },
             refresh: function () {
                 var that = this;
@@ -102,17 +77,8 @@
 
         });
         kendo.bind($(".wrap"), viewModel);
-
-        var viewModel_fileUpload_default = kendo.observable({
-            isEnabled: true,
-            isVisible: true,
-        });
-        kendo.ui.Upload.fn._supportsDrop = function() { return false; } //drag drop 없음
-        setTimeout(function() {
-            kendo.bind($("#viewModel_fileUpload_default"), viewModel_fileUpload_default); 
-        }, 100)
        
-    </script> 
+    </script>
 </body>
 
 </html>
